2008-05-16  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/drawtool.*: Use new
	OBForceField::SetIgnoreAtom() to make sure the new atom doesn't push
	away other fragment you want to connect with. Also fix the atom when
	you hit an atom that already exists. This makes drawing rings with
	AutoOpt enabled really easy.

	* libavogadro/src/autoopttool.*: Use new OBForceField::SetFixAtom()

	* libavogadro/src/extensions/animationdialog.ui: Make the dialog
	more compact. Removed the group boxes.

2008-05-16  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/tools/autorotatetool.cpp, 
	libavogadro/src/extensions/animationextension.cpp, 
	libavogadro/src/extensions/orbitalextension.cpp, 
	libavogadro/src/extensions/gaussianextension.cpp, 
	libavogadro/src/extensions/propextension.cpp, 
	avogadro/src/mainwindow.ui, avogadro/src/mainwindow.cpp:
	More interface cleanup -- any menu item or button which brings up
	a dialog should have "..." at the end. (KDE, Windows, and Mac UI guidelines.)
	
2008-05-16  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/orbitaldialog.*: Hide more advanced
	options for now, minor cleanup.

	* libavogadro/src/tools/aligntool.*: Added options to align everything
	or just the current molecule.

	* libavogadro/src/tools/aligntool.cpp,
	libavogadro/src/tools/autorotatetool.cpp,
	libavogadro/src/tools/bondcentrictool.cpp,
	libavogadro/src/tools/selectrotatetool.cpp: More layout improvements.

	* libavogadro/src/tools/drawtool.cpp: Layout improvements in the tool
	set up dialog.

	* libavogadro/src/extensions/gaussianinputdialog.*: Added the ability
	to edit the input deck, revert etc.

	* libavogadro/src/tools/drawtool.cpp: Added some extra signals on
	mouse release to ensure molecule is updated.

	* libavogadro/src/extensions/gaussianinputdialog.ui: Fixed the tab
	ordering of the dialog.

	* libavogadro/src/periodictableview.cpp: Some changes to improve