@@ -1,5 +1,11 @@
 2008-05-16  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
 
+	* libavogadro/src/iso.cpp: Surfaces are now centered around atom
+	again. The - 0.5 * m_stepSize correction is only needed for 
+	vMarchCube1(float,float,float). This is a bug in OBFloatGrid? 
+
+2008-05-16  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
+
 	* libavogadro/src/tools/drawtool.*: Use new
 	OBForceField::SetIgnoreAtom() to make sure the new atom doesn't push
 	away other fragment you want to connect with. Also fix the atom when
